# mitigating-factual-hallucinations

./: .gitignore  README.md  pyproject.toml
configs/analysis/: confirmatory.yaml
configs/benchmarks/: aa-omniscience-public.yaml  language-consistency-v1.json  simpleqa-verified.yaml  triviaqa.yaml
configs/contamination/: triviaqa-ood.yaml
configs/experiments/: core.yaml  grader-selection-amendment.json  model-selection-amendment.json  phases.yaml  robustness-diagnostics.json
configs/graders/: aa-omniscience-public.prompt.txt  aa-omniscience-public.yaml  simpleqa-verified.prompt.txt  simpleqa-verified.yaml  strongreject-evaluator-prompt.txt
configs/models/: bonsai-27b-mlx-1bit.snapshot.json  bonsai-27b-mlx-1bit.yaml  gemma4-e4b-it-qat-mobile.snapshot.json  gemma4-e4b-it-qat-mobile.yaml  gemma4-e4b-it.snapshot.json  gemma4-e4b-it.yaml  qwen3.6-27b-mlx-4bit.snapshot.json  qwen3.6-27b-mlx-4bit.yaml  qwen3.6-27b-nvfp4.snapshot.json  qwen3.6-27b-nvfp4.yaml  ternary-bonsai-27b-awq.snapshot.json  ternary-bonsai-27b-awq.yaml  ternary-bonsai-27b-gguf.yaml  ternary-bonsai-4b-gguf.yaml  ternary-bonsai-4b-unpacked.snapshot.json  ternary-bonsai-4b-unpacked.yaml
configs/prompts/: primary.yaml
configs/runtimes/: bonsai-27b-mlx-1bit.json  prism-llama-server-62061f91-bonsai-4b.yaml  prism-llama-server-62061f91.yaml  qwen3.6-27b-mlx-4bit-policy.json  qwen3.6-27b-nvfp4-policy.json
docs/: implementation-status-beamer.aux  implementation-status-beamer.fdb_latexmk  implementation-status-beamer.fls  implementation-status-beamer.tex  operator-guide.md  research-plan.md
docs/build-status-beamer/: implementation-status-beamer.fdb_latexmk  implementation-status-beamer.fls
docs/rub-beamer/: beamerinnerthemeRub.sty  beamerouterthemeRub.sty  beamerthemeRub.sty
scripts/: run_e1_post_generation.zsh
src/mfh/: __init__.py  __main__.py  artifact_namespace.py  cli.py  config.py  contracts.py  errors.py  provenance.py
src/mfh/analysis/: __init__.py  derivation.py  human_audit.py  protocol.py  reporting.py  statistics.py
src/mfh/data/: __init__.py  benchmarks.py  contamination.py  contamination_review.py  io.py  language_suite.py  normalization.py  reviewed_splits.py  runtime_validation.py  semantic_contamination.py  side_effect_sampling.py  source_snapshots.py  splits.py
src/mfh/evaluation/: __init__.py  grading.py  ifeval.py  language.py  metrics.py  official.py  openrouter.py  risk.py  side_effects.py  simpleqa.py  strongreject.py  transitions.py
src/mfh/experiments/: __init__.py  aa_official_track.py  activation_store.py  confirmatory_components.py  confirmatory_graders.py  confirmatory_operator.py  e0_completion.py  e0_mlx.py  e0_phase.py  e0_vllm.py  e10_composite.py  e10_early_probe.py  e10_freeze_operator.py  e10_native.py  e1_mlx.py  e1_vllm.py  e2_capture.py  e2_controller_inputs.py  e2_mlx.py  e2_phase.py  e2_probes.py  e2_schedule.py  e2_vllm.py  e3_construction.py  e3_control_materials.py  e3_phase.py  (+48 more)
tests/: __init__.py  conftest.py  e4_test_artifacts.py  test_aa_official_track.py  test_activation_store.py  test_adaptive.py  test_analysis_protocol_reporting.py  test_composite.py  test_confirmatory_execution.py  test_confirmatory_graders.py  test_confirmatory_operator.py  test_contamination_review.py  test_contracts_config.py  test_data.py  test_e0_completion.py  test_e0_mlx.py  test_e0_phase.py  test_e0_vllm.py  test_e10_early_probe.py  test_e10_native.py  test_e10_provenance.py  test_e1_mlx.py  test_e1_vllm.py  test_e2_capture.py  test_e2_cli.py  test_e2_phase.py  test_e2_probes.py  test_e2_schedule.py  test_e3_construction.py  test_e3_controls.py  test_e3_operator.py  test_e3_schedule.py  test_e3_selection.py  test_e4_baselines.py  test_e4_caa_cli.py  test_e4_caa_mlx.py  test_e4_caa_vllm.py  test_e5_adaptive.py  test_e5_capture.py  test_e5_controller_splits.py  (+53 more)
(+26 files in other folders)
