[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mfh-research"
version = "0.1.0"
description = "Risk-gated activation steering research framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mitigating Factual Hallucinations research project" }]
dependencies = [
  "cryptography>=44,<47",
  "numpy>=1.26,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
research = [
  "accelerate>=1.2,<2",
  "datasets>=3.2,<5",
  "huggingface-hub>=0.28,<2",
  "pandas>=2.2,<4",
  "safetensors>=0.5,<1",
  "scikit-learn>=1.4,<2",
  "scipy>=1.12,<2",
  "statsmodels>=0.14,<1",
  "torch>=2.5,<3",
  "transformers>=4.48,<6",
]
cuda-a100 = [
  "vllm==0.24.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
dev = [
  "mypy>=1.14,<2",
  "nbformat>=5.10,<6",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
  "safetensors>=0.5,<1",
  "torch>=2.5,<3",
  "transformers>=4.48,<6",
  "types-PyYAML>=6.0,<7",
]

[project.scripts]
mfh = "mfh.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mfh"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tmp"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["mfh"]
